# cmds-helper

./: .gitignore  README.md  cmds.py  example_cmd.json  main.py  pyproject.toml  test.json  test_cmd.json
cmdshelper/: __init__.py  __main__.py  helper.py
scripts/: cdmshelper.bat
tests/: run.py
