[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmds-helper"
version = "0.0.1"
authors = [
  { name="Keyisa Raihan", email="keyisakris@gmail.com" },
]
description = "A modul to help us to shortcut and run cli cmd command"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yotakeys/cmds-helper"
"Bug Tracker" = "https://github.com/yotakeys/cmds-helper/issues"