[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmds-helper"
version = "0.1.0"
authors = [
  { name="Keyisa Raihan", email="keyisakris@gmail.com" },
]
description = "CLI CMD Command helper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yotakeys/cmds-helper"
"Bug Tracker" = "https://github.com/yotakeys/cmds-helper/issues"